# sapnwrfcsdk-rust

./: .gitignore  Cargo.toml  README.md  build.rs  sapnwrfc.ini
examples/: rfc1.rs  sap-docu-get.rs
src/: connection.rs  function.rs  lib.rs  rfc_param.rs  string.rs  structure.rs  table.rs  value.rs
tests/: connect.rs
