[package]
name = "librfc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = { version = "*" }

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
cty = "*"
env_logger = "*"
lazy_static = "*"
log = "*"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = { git = "https://github.com/hapejot/serde-yaml.git", version = "0.9.35" }
tracing = "0.1.41"
ucs2 = "*"
